[gd_scene load_steps=10 format=3 uid="uid://bxt6nwjxeo4i8"]

[ext_resource type="Script" path="res://ui/tabs/tab_jukebox/tab_jukebox.gd" id="1_enohi"]
[ext_resource type="Script" path="res://assets/game_manager/audio/audio.gd" id="2_eujgv"]
[ext_resource type="PackedScene" uid="uid://b6o13q7qteh2i" path="res://ui/tabs/tab_elements/draggable_tree/draggable_tree.tscn" id="2_o2hp0"]
[ext_resource type="Texture2D" uid="uid://noi6i8fmrepx" path="res://resources/icons/open_folder_icon.png" id="3_inyrj"]
[ext_resource type="Texture2D" uid="uid://dufx3biipbvha" path="res://resources/icons/mute_icon.png" id="3_mxqcy"]
[ext_resource type="Texture2D" uid="uid://dwfkjnyl85tqn" path="res://resources/icons/stop_icon.png" id="4_af58b"]
[ext_resource type="Texture2D" uid="uid://ckd03gcqkho3n" path="res://resources/icons/sound_icon.png" id="4_bkosv"]
[ext_resource type="Texture2D" uid="uid://ph36o52jrb1h" path="res://resources/icons/cross_icon.png" id="4_h0nbq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lfy0"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 1

[node name="TabJukebox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_enohi")

[node name="Audio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Jukebox"
script = ExtResource("2_eujgv")

[node name="C" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="C2" type="HBoxContainer" parent="C"]
layout_mode = 2

[node name="MuteButton" type="Button" parent="C/C2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Mute the music for all players"
toggle_mode = true
icon = ExtResource("3_mxqcy")
icon_alignment = 1

[node name="StopButton" type="Button" parent="C/C2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Stop the music for all players"
icon = ExtResource("4_af58b")
icon_alignment = 1

[node name="C" type="PanelContainer" parent="C"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7lfy0")

[node name="C" type="VBoxContainer" parent="C/C"]
layout_mode = 2

[node name="DraggableTree" parent="C/C/C" instance=ExtResource("2_o2hp0")]
unique_name_in_owner = true
layout_mode = 2
hide_folding = true
scroll_horizontal_enabled = false
drag_type = "Jukebox_tab_music_items"
allow_drop_blank = true
allow_drop_on_item = true
allow_drop_inbetween = true
drop_types_allowed = ["campaign_resouce_items"]

[node name="MarginContainer" type="MarginContainer" parent="C/C/C"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="C" type="HBoxContainer" parent="C/C/C/MarginContainer"]
layout_mode = 2

[node name="ResouceButton" type="Button" parent="C/C/C/MarginContainer/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Edit attributes in Resources tab"
icon = ExtResource("4_bkosv")
icon_alignment = 1

[node name="ImportButton" type="Button" parent="C/C/C/MarginContainer/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Import selected resorce of Resouces tab"
icon = ExtResource("3_inyrj")
icon_alignment = 1

[node name="ClearButton" type="Button" parent="C/C/C/MarginContainer/C"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Remove selected music from list"
icon = ExtResource("4_h0nbq")
icon_alignment = 1
